<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Odin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text_toggle_light">Toggle Light</string>
    <string name="button_text_off_fan">Off Fan</string>
    <string name="button_text_low_fan">Low Fan</string>
    <string name="button_text_high_fan">High Fan</string>
    <string name="button_text_garage">Garage</string>
    <string name="button_text_refresh">Refresh Data</string>
    <string name="default_temp_text">0.0 °F</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="garage_widget_text">Toggle Garage Door</string>

</resources>
